Fixed border radius and spacing

--- a/src/static/styles/index.css
+++ b/src/static/styles/index.css
@@ -28,5 +28,5 @@
 }
 
 .power-card {
-  border-radius: 20px;
+  border-radius: 10px;
 }
